reformat contact, links open in new tab, dev pic

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -382,11 +382,11 @@ a:hover, a:focus {
 	Supersized - Fullscreen Slideshow jQuery Plugin
 	Version : 3.2.7
 	Site	: www.buildinternet.com/project/supersized
-	
+
 	Author	: Sam Dunn
 	Company : One Mighty Roar (www.onemightyroar.com)
 	License : MIT License / GPL License
-	
+
 */
 * {
   margin: 0;
@@ -5609,7 +5609,7 @@ img.mfp-img {
 }
 /* ------------------ WORKS ------------------ */
 /* ----------------------------- */
-/* RECOMMENDED ISOTOPE STYLES 
+/* RECOMMENDED ISOTOPE STYLES
 /* Has been ported into SASS
 /* ---------------------------- */
 /* Isotope Filtering */
@@ -5945,6 +5945,13 @@ img.mfp-img {
 /* --------------------- */
 /* CONTACT INFO
 /* --------------------- */
+.contact-info ul.list-flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .contact-info li {
   padding-bottom: 30px;
 }
